src/tests/negative-suites/lexer.nts
#############################################################################
~
?UnexpectedCharacter, 2, 1

#############################################################################
1234567890123456789
?InvalidLiteralInt32, 3, 1

#############################################################################
12345678912345678901234567891234567890123456789.123123123123123123123123123123123123123
?InvalidLiteralFloat, 3, 1

#############################################################################
a:int
  (#
?UnexpectedEofInMultilineComment, 4, 3
